--- a/Trabajo clase/Trabajo clase/style.css
+++ b/Trabajo clase/Trabajo clase/style.css
@@ -13,5 +13,29 @@ html {
 
 .header {
     background-image: url(img/img1.jpg);
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+}
 
+.nav {
+    display: flex;
+    width: 20%;
+    justify-content: space-between;
+    align-self: center;
+}
+
+.nav__list__link--decoration {
+    text-decoration: none;
+    color: black;
+    font-size: 18px;
+    text-decoration: underline;
+}
+
+.header__h1 {
+    font-size: 400%;
+    margin-bottom: -1%;
 }
